--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <body>
     
 
-    <h1>Hello wolrd</h1>
+    <h1>Hello wolrd chanee code 2 </h1>
 
 
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus architecto distinctio voluptas nesciunt? Alias praesentium earum beatae autem saepe necessitatibus temporibus soluta, est optio at odit rerum, eveniet dicta!
+test
+    
     </p>
 </body>
 </html>
