hello index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-    <h1>Hello wolrd chanee code 4rwerwe werwer wrwe </h1>
-
-
-    <p>
-test
-    
-    </p>
+ <h1>Hello World INternet</h1>
 </body>
 </html>
